Minor overflow fix

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,9 +7,8 @@
 }
 
 html {
+
     font-size: 62.5%;
-    padding: 2rem;
-    overflow-x: hidden;
 
     @include respond(tab-land) {
         font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
@@ -34,7 +33,13 @@ html {
 }
 
 body { 
+    padding: 2rem;
+    //overflow-x: hidden;
     box-sizing: border-box;
+
+    @include respond(tab-land) {
+        padding: 0; 
+    }
 }
 
 ::selection {
